--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,8 +9,17 @@
     width: 1200px;
     margin: 0 auto;
   }
+  .w1000 {
+    width: 1000px;
+    margin: 0 auto;
+  }
   .max-w55p {
     max-width: 55%;
+  }
+  .max-w100p {
+    max-width: 100%;
+    padding: 0 30px;
+    /* max-width: 55%; */
   }
   .fz-14 {
     font-size: 14px;
